# equilux

./: .gitignore  .gitmodules  .readthedocs.yaml  404.html  CNAME  README.md  about.html  get-started.html  index.html  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml
.github/: deploy_docs.yaml  rtd_mkdocs.yml
.github/workflows/: check_mkdocs_build.yml  deploy_docs.yaml
docs/: .readthedocs.yaml  .requirements_docs.txt  .rtd_requirements.txt  about.md  adiabatic_linear.ipynb  adiabatic_sigmoid.ipynb  bell_state.ipynb  get-started.md  getting-started.md  ghz_state.ipynb  index.md  ising_model.ipynb  one_qubit_rabi_flopping.ipynb  qaoa.ipynb
docs/hardware/: about-oqd.md  devices.md
docs/tutorials/: analog.md  index.md  ising.md  rabi-flopping.md
examples/: adiabatic_linear.html  adiabatic_linear.ipynb  adiabatic_sigmoid.html  adiabatic_sigmoid.ipynb  bell_state.html  bell_state.ipynb  ghz_state.html  ghz_state.ipynb  ising_model.html  ising_model.ipynb  one_qubit_rabi_flopping.html  one_qubit_rabi_flopping.ipynb  qaoa.html  qaoa.ipynb  quantum_scars.html  quantum_scars.ipynb  test.py  test_client.py
hardware/: about-oqd.html  devices.html
open-quantum-design-analog-emulator/: index.html  installation.html
open-quantum-design-analog-emulator/explanation/: qutip-simulation.html
open-quantum-design-analog-emulator/reference/: qutip_backend.html  qutip_compiler.html
open-quantum-design-analog-emulator/tutorials/: analog.html  ising.html  rabi-flopping.html
open-quantum-design-cloud/: index.html  installation.html
open-quantum-design-cloud/explanation/: docker-compose.html
open-quantum-design-cloud/reference/: client.html  provider.html  server.html
open-quantum-design-compiler-infrastructure/: index.html
open-quantum-design-compiler-infrastructure/explanation/: infrastructure.html  language.html  reference.html
open-quantum-design-compiler-infrastructure/get-started/: acknowledgement.html  installation.html
open-quantum-design-compiler-infrastructure/reference/: base.html  interface.html  rewriter.html  rule.html  walk.html
open-quantum-design-compiler-infrastructure/tutorial/: calculator.html
open-quantum-design-core/: index.html
open-quantum-design-core/explanation/: analog_interface.html  atomic_interface.html  canonicalization.html  math_interface.html
open-quantum-design-core/get-started/: acknowledgement.html  installation.html
open-quantum-design-core/reference/: analog_canonicalization.html  analog_interface.html  atomic_canonicalization.html  atomic_interface.html  math_compiler.html  math_interface.html
search/: search_index.json
tutorials/: index.html  ising.html  rabi-flopping.html
