[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "oqd-quarry"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "seaborn"
]

[project.optional-dependencies]
docs = [
    "pymdown-extensions",
    "mkdocstrings",
    "mkdocs-material",
    "mkdocstrings-python",
    "mdx_truly_sane_lists",
    "jupyter",
    "jupyter_contrib_nbextensions",
    "mkdocs-jupyter",
]
test = ["unittest_prettify"]

#[tool.setuptools.packages.find]
#where = ["."]
#include = ["oqd-*"]
