[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "equilux"
version = "0.0.0"
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["quantum", "computing", "analog", "digitial", "atomic", "simulation", "full-stack"]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research ",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Security :: Cryptography",
  "Topic :: Scientific/Engineering :: Information Analysis",

  "License :: OSI Approved :: Apache Software License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]


dependencies = [
    "matplotlib",
    "seaborn"
]

[project.optional-dependencies]
docs = [
    "pymdown-extensions",
    "mkdocstrings",
    "mkdocs-material",
    "mkdocstrings-python",
    "mdx_truly_sane_lists",
    "jupyter",
    "jupyter_contrib_nbextensions",
    "mkdocs-jupyter",
]
test = ["unittest_prettify"]

#[tool.setuptools.packages.find]
#where = ["."]
#include = ["oqd-*"]

[project.urls]
Homepage = "https://github.com/OpenQuantumDesign/equilux"
Documentation = "https://docs.openquantumdesign.org"
Repository = "https://github.com/OpenQuantumDesign/equilux.git"
Issues = "https://github.com/OpenQuantumDesign/equilux/issues"